<resources>
    <!-- App strings -->
    <string name="app_name">CoopeMobile</string>

    <!-- Menu strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Inicio</string>
    <string name="nav_offers">Ofertas</string>
    <string name="nav_magazines">Folletos</string>
    <string name="nav_orders">Mis listas</string>
    <string name="nav_stores">Sucursales</string>
    <string name="nav_contact">Contacto</string>
    <string name="nav_settings">Configuraciones</string>
    <string name="nav_title_login">Menu login</string>
    <string name="nav_login">Login</string>
</resources>
