<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_offers" />
        <item
            android:id="@+id/nav_magazines"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_magazines" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_orders" />
        <item
            android:id="@+id/nav_stores"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_stores" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_contact" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="@string/nav_title_login">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_login" />
        </menu>
    </item>

</menu>
